Fully implemented calculator

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <button class="key number">0</button>
             <button class="key equals">=</button>
             <button class="key operator">+</button>
-            <button class="key" id="back-button">B</button>
-            <button class="key" id="clear-button">C</button>
+            <button class="key backspace">B</button>
+            <button class="key clear">C</button>
         </div>
     </div>
 </body>
