--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="key number">0</button>
             <button class="key equals">=</button>
             <button class="key operator">+</button>
-            <button class="key backspace">B</button>
+            <button class="key backspace">del</button>
             <button class="key clear">C</button>
         </div>
     </div>
